@@ -16,7 +16,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 @Component
 public class BackofficeApprovedAgreementProfileConverter
@@ -30,11 +29,11 @@ public class BackofficeApprovedAgreementProfileConverter
     static {
         discountCodeTypeMap.put(DiscountCodeTypeEnum.API, DiscountCodeType.API);
         discountCodeTypeMap.put(DiscountCodeTypeEnum.STATIC, DiscountCodeType.STATIC);
-        discountCodeTypeMap.put(DiscountCodeTypeEnum.LANDINGPAGE, DiscountCodeType.LANDINGPAGE);
+        discountCodeTypeMap.put(DiscountCodeTypeEnum.LANDINGPAGE, DiscountCodeType.LANDING_PAGE);
         discountCodeTypeMap.put(DiscountCodeTypeEnum.BUCKET, DiscountCodeType.BUCKET);
 
         entityTypeMap.put(EntityTypeEnum.PRIVATE, EntityType.PRIVATE);
-        entityTypeMap.put(EntityTypeEnum.PUBLIC_ADMINISTRATION, EntityType.PUBLICADMINISTRATION);
+        entityTypeMap.put(EntityTypeEnum.PUBLIC_ADMINISTRATION, EntityType.PUBLIC_ADMINISTRATION);
 
     }
 
@@ -51,24 +50,24 @@ public class BackofficeApprovedAgreementProfileConverter
     };
     protected Function<List<AddressEntity>, List<String>> addressToDto = entityList -> entityList.stream()
                                                                                                  .map(AddressEntity::getFullAddress)
-                                                                                                 .collect(Collectors.toList());
+                                                                                                 .toList();
     protected Function<ProfileEntity, SalesChannel> salesChannelToDto = entity -> {
         switch (entity.getSalesChannel()) {
             case ONLINE:
                 OnlineChannel onlineChannel = new OnlineChannel();
-                onlineChannel.setChannelType(SalesChannelType.ONLINECHANNEL);
+                onlineChannel.setChannelType(SalesChannelType.ONLINE_CHANNEL);
                 onlineChannel.setWebsiteUrl(entity.getWebsiteUrl());
                 onlineChannel.setDiscountCodeType(toDtoDiscountCodeTypeEnum.apply(entity.getDiscountCodeType()));
                 return onlineChannel;
             case OFFLINE:
                 OfflineChannel physicalStoreChannel = new OfflineChannel();
-                physicalStoreChannel.setChannelType(SalesChannelType.OFFLINECHANNEL);
+                physicalStoreChannel.setChannelType(SalesChannelType.OFFLINE_CHANNEL);
                 physicalStoreChannel.setWebsiteUrl(entity.getWebsiteUrl());
                 physicalStoreChannel.setAddresses(addressToDto.apply(entity.getAddressList()));
                 return physicalStoreChannel;
             case BOTH:
                 BothChannels bothChannels = new BothChannels();
-                bothChannels.setChannelType(SalesChannelType.BOTHCHANNELS);
+                bothChannels.setChannelType(SalesChannelType.BOTH_CHANNELS);
                 bothChannels.setWebsiteUrl(entity.getWebsiteUrl());
                 bothChannels.setAddresses(addressToDto.apply(entity.getAddressList()));
                 bothChannels.setDiscountCodeType(toDtoDiscountCodeTypeEnum.apply(entity.getDiscountCodeType()));
