@@ -23,8 +23,8 @@ import javax.transaction.Transactional;
 import java.time.LocalDate;
 import java.util.LinkedList;
 import java.util.List;
+import java.util.Objects;
 import java.util.function.Consumer;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 @SpringBootTest
@@ -106,7 +106,7 @@ class BackofficeAttributeAuthorityFacadeTest
                                                                                                         "org1",
                                                                                                         "org1@pec.it",
                                                                                                         OrganizationStatus.DRAFT,
-                                                                                                        EntityType.PUBLICADMINISTRATION);
+                                                                                                        EntityType.PUBLIC_ADMINISTRATION);
 
         List<OrganizationWithReferentsAndStatus> items = new LinkedList<>();
         items.add(organization0);
@@ -181,10 +181,10 @@ class BackofficeAttributeAuthorityFacadeTest
                                                                                                         "org0",
                                                                                                         "org0@pec.it",
                                                                                                         OrganizationStatus.DRAFT,
-                                                                                                        EntityType.PUBLICADMINISTRATION);
+                                                                                                        EntityType.PUBLIC_ADMINISTRATION);
 
 
-        Consumer<OrganizationWithReferentsAndStatus> assertions = (org) -> {
+        Consumer<OrganizationWithReferentsAndStatus> assertions = org -> {
             Mockito.when(attributeAuthorityService.getOrganization(Mockito.any()))
                    .thenReturn(ResponseEntity.ok(organizationWithReferentsAndStatusConverter.toAttributeAuthorityModel(
                            org)));
@@ -332,8 +332,8 @@ class BackofficeAttributeAuthorityFacadeTest
                                                                      anOrganizationName,
                                                                      anOrganizationPec,
                                                                      false,
-                                                                     EntityType.PUBLICADMINISTRATION);
-        Consumer<UpsertResult> assertionsBlock = (ur) -> {
+                                                                     EntityType.PUBLIC_ADMINISTRATION);
+        Consumer<UpsertResult> assertionsBlock = ur -> {
             ;
             Assertions.assertEquals(HttpStatus.OK, ur.response.getStatusCode());
             Assertions.assertNotNull(ur.response.getBody());
@@ -372,10 +372,9 @@ class BackofficeAttributeAuthorityFacadeTest
                                                                      anOrganizationName,
                                                                      anOrganizationPec,
                                                                      false,
-                                                                     EntityType.PUBLICADMINISTRATION);
+                                                                     EntityType.PUBLIC_ADMINISTRATION);
 
-        Consumer<UpsertResult> assertionsBlock = (ur) -> {
-            ;
+        Consumer<UpsertResult> assertionsBlock = ur -> {
             Assertions.assertEquals(HttpStatus.OK, ur.response.getStatusCode());
             Assertions.assertNotNull(ur.response.getBody());
             Assertions.assertEquals(anOrganizationFiscalCode, ur.response.getBody().getOrganizationFiscalCode());
@@ -439,10 +438,10 @@ class BackofficeAttributeAuthorityFacadeTest
     @Test
     void GetReferents_Ok() {
         Mockito.when(attributeAuthorityService.getReferents(Mockito.any()))
-               .thenReturn(ResponseEntity.ok(Stream.of("AAAAAA00A00A000A").collect(Collectors.toList())));
+               .thenReturn(ResponseEntity.ok(Stream.of("AAAAAA00A00A000A").toList()));
         ResponseEntity<List<String>> response = backofficeAttributeAuthorityFacade.getReferents("1234567890");
         Assertions.assertEquals(HttpStatus.OK, response.getStatusCode());
-        Assertions.assertEquals("AAAAAA00A00A000A", response.getBody().get(0));
+        Assertions.assertEquals("AAAAAA00A00A000A", Objects.requireNonNull(response.getBody()).getFirst());
     }
 
     @Test
